--- a/Aspire.Hosting.Spin/Aspire.Hosting.Spin.csproj
+++ b/Aspire.Hosting.Spin/Aspire.Hosting.Spin.csproj
@@ -1,6 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Product>Aspire.Hosting.Spin</Product>
+    <PackageId>com.fermyon.spin.aspire.hosting</PackageId>
+    <Authors>Fermyon Technologies</Authors>
+    <Company>Fermyon Technologies</Company>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
