--- a/Aspire.Hosting.Spin.Tests/Aspire.Hosting.Spin.Tests.csproj
+++ b/Aspire.Hosting.Spin.Tests/Aspire.Hosting.Spin.Tests.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Moq" Version="4.20.70" />
         <PackageReference Include="xunit" Version="2.5.3" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+        <PackageReference Include="Xunit.SkippableFact" Version="1.4.13" />
     </ItemGroup>
 
     <ItemGroup>
