--- a/Aspire.Hosting.Spin/Aspire.Hosting.Spin.csproj
+++ b/Aspire.Hosting.Spin/Aspire.Hosting.Spin.csproj
@@ -1,18 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <Product>Aspire.Hosting.Spin</Product>
-    <PackageId>com.fermyon.spin.aspire.hosting</PackageId>
-    <Authors>Fermyon Technologies</Authors>
-    <Company>Fermyon Technologies</Company>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <Version>0.0.20</Version>
-  </PropertyGroup>
+    <PropertyGroup>
+        <Product>Aspire.Hosting.Spin</Product>
+        <PackageId>Aspire.Hosting.Spin</PackageId>
+        <Authors>Fermyon Technologies</Authors>
+        <Company>Fermyon Technologies</Company>
+        <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageProjectUrl>https://github.com/fermyon/Aspire.Hosting.Spin</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/fermyon/Aspire.Hosting.Spin</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <Nullable>enable</Nullable>
+        <Version>0.0.20</Version>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Aspire.Hosting" Version="8.0.1" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Aspire.Hosting" Version="8.0.1"/>
+    </ItemGroup>
+    <ItemGroup>
+        <None Include="../README.md" Pack="true" PackagePath="/"/>
+    </ItemGroup>
 
 </Project>
